[package]
name = "dco"
description = "A simple tool for adding a DCO Signed-off-by: line to a git commit message"
version = "0.1.3"
authors = ["Zack Cerza"]
homepage = "https://github.com/zmc/dco"
repository = "https://github.com/zmc/dco"
readme = "README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
